--- a/app/views/startseite.scala.html
+++ b/app/views/startseite.scala.html
@@ -9,12 +9,12 @@
 	</header>
 	<h3>Hello @user.username!</h3>
 	<div class="buttons">
-		<a href="@routes.UnoGame.spiel_erstellen()">Spiel erstellen</a>
+		<a href="@routes.GetStarted.spiel_erstellen()">Spiel erstellen</a>
 	</div>
 	<div class="buttons">
 		<a href="@routes.UnoGame.spiel_beitreten()">Spiel beitreten</a>
 	</div>
 	<div class="buttons">
-		<a href="@routes.UnoGame.regelwerk()">Regelwerk</a>
+		<a href="@routes.GetStarted.regelwerk()">Regelwerk</a>
 	</div>
 }
