--- a/app/views/regelwerk.scala.html
+++ b/app/views/regelwerk.scala.html
@@ -5,7 +5,7 @@
 		<h3>Ein Projekt von B.Pllana, D.Sickel und V.Weirich</h3>
 	</header>
 	<div class="buttons">
-		<a href="@routes.Application.startseite()">Zur Startseite zurück</a>
+		<a href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>
 	</div>
 	<div>
 		<h3>Kartenset (108 Karten)</h3>
@@ -58,6 +58,6 @@
 		</ul>
 	</div>
 	<div class="buttons">
-		<a href="@routes.Application.startseite()">Zur Startseite zurück</a>
+		<a href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>
 	</div>
 }
