--- a/app/views/startseite.scala.html
+++ b/app/views/startseite.scala.html
@@ -17,4 +17,7 @@
 	<div class="buttons">
 		<a href="@routes.GetStarted.regelwerk()">Regelwerk</a>
 	</div>
+	<div class="buttons">
+		<a href="@routes.Application.testChat()">Chatroom betreten</a>
+	</div>
 }
