Test Commit, mit neuen Radiobuttons

--- a/app/views/gameboard.scala.html
+++ b/app/views/gameboard.scala.html
@@ -16,7 +16,8 @@ and open the template in the editor.
         <div class="spielfeld">
             <div class="zeile">
                 <p class="leer"><span></span></p>
-                <p class="spielekarten"><span>
+                <p class="spielekarten">
+                	<span>
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
@@ -27,11 +28,13 @@ and open the template in the editor.
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
-                    </span></p>
+                    </span>
+                </p>
                 <p class="leer"><span></span></p>
             </div>
             <div class="zeile">
-                <p class="spielekarten"><span>
+                <p class="spielekarten">
+                	<span>
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
@@ -42,7 +45,8 @@ and open the template in the editor.
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
                         <img src="http://placehold.it/40x60/99B1D7">
-                    </span></p>
+                    </span>
+                </p>
                 <p class="ablage"><span >
                         <img id="deckblatt" src="http://placehold.it/40x60/B04C80">
                         <img id="ablagestapel" src="http://placehold.it/40x60/B04C80">
