--- a/app/views/spiel_erstellen.scala.html
+++ b/app/views/spiel_erstellen.scala.html
@@ -8,6 +8,7 @@
 	</header>
 	<div>
 		<h3>Spielmodus wählen:</h3>
+		<!-- 
 		<p>
 			<input type="radio" value="R" name="regel" />mit Basisregeln spielen
 		</p>
@@ -15,14 +16,25 @@
 			<input type="radio" value="R" name="regel" />mit erweiterten Regeln
 			spielen
 		</p>
+		-->
+		#{formfield 'type'}
+			<input type="radio" name="type" value="a" #{if field.value=='a'}checked="checked"#{/if}>
+   			 Selection 1
+			<input type="radio" name="type" value="b" #{if field.value=='b'}checked="checked"#{/if}>
+   			 Selection 2
+			<input type="radio" name="type" value="c" #{if field.value=='c'}checked="checked"#{/if}>
+    		 Selection 3
+		#{/formfield}
 
 	</div>
 	<div>
 		<h3>Anzahl Spieler festlegen:</h3>
 		<p>
-			<select><option>2 Spieler</option>
+			<select id="selector">
+				<option>2 Spieler</option>
 				<option>3 Spieler</option>
-				<option>4 Spieler</option></select>
+				<option>4 Spieler</option>
+			</select>
 		</p>
 	</div>
 	<div>
