CSS eingebunden in Gameboard-Page

--- a/app/views/gameboard.scala.html
+++ b/app/views/gameboard.scala.html
@@ -9,7 +9,8 @@ and open the template in the editor.
     <head>
         <title>Spielfeld</title>
         <meta charset="utf-8">
-        <link href="public/stylesheets/gameboard.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" media="screen" type="text/css" href="@routes.Assets.at("stylesheets/gameboard.css")">
+        
     </head>
     <body>
     <h1>@message</h1>
