--- a/app/views/startseite.scala.html
+++ b/app/views/startseite.scala.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="buttons">
-		<a href="@routes.UnoGame.spiel_beitreten()">Spiel beitreten</a>
+		<a href="@routes.Application.spiel_beitreten()">Spiel beitreten</a>
 	</div>
 	<div class="buttons">
 		<a href="@routes.GetStarted.regelwerk()">Regelwerk</a>
