--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,12 @@
+@javaScript = {
+<<script type="text/javascript">
+<!--
 
-@main("Welcome to Play") {
+//-->
+</script>
+}
+
+@main("Welcome to Play")(javaScript) {
 
    <header>
 		<h1>Willkommen bei</h1>
