--- a/app/views/regelwerk.scala.html
+++ b/app/views/regelwerk.scala.html
@@ -1,4 +1,11 @@
-@main("Regelwerk") {
+@javaScript = {
+<script type="text/javascript">
+<!--
+
+//-->
+</script>
+}
+@main("Regelwerk")(javaScript) {
 	<header>
 		<div id="titelbild" src="URL für UNO-Bild"></div>
 		<h2>Regelwerk</h2>
