--- a/app/views/startseite.scala.html
+++ b/app/views/startseite.scala.html
@@ -1,5 +1,4 @@
 @(user: model.User)
-
 @javaScript = {
 <script type="text/javascript">
 <!--
@@ -9,29 +8,44 @@
 }
 
 @main("Startseite")(javaScript) {
-
-	<header>
-		<h1>Willkommen bei</h1>
-		<div id="titelbild" src="URL für UNO-Bild"></div>
-		<h1>Online</h1>
-		<h3>Ein Projekt von B.Pllana, D.Sickel und V.Weirich</h3>
+	<header class="col-md-12" id="header">
+		<a class="btn btn-link" href="@routes.Application.impressum()">Impressum</a>
+		<a class="btn btn-link" href="@routes.Application.login()">Ausloggen</a>
 	</header>
-	<h3 class="hover">Hello @user.username!</h3>
-	<div id="erstellen" class="buttons">
-		<a  href="@routes.Application.spiel_erstellen()">Spiel erstellen</a>
+	<div class="col-md-12 start">
+		<section class="col-md-6 logo">
+			<h1 class="startCenter"><span class="blueText">Will</span><span class="greenText">kom</span><span class="redText">men</span> <span class="yellowText">bei</span></h1>
+			<div id="unologo">
+				<br></br>
+				<br></br>
+				<br></br>
+				<h1>UNO</h1>
+				<h1>UNO</h1>
+				<br></br>
+				<br></br>
+				<br></br>
+			</div>
+			<h1 class="startCenter"><span class="greenText">On</span><span class="yellowText">li</span><span class="redText">ne</span></h1>
+			<h3 class="startCenter">Ein Projekt von <del>B.Pllana,</del> D.Sickel <del>und V.Weirich</del></h3>
+		</section>
+		<section class="col-md-6 startContent"> 
+			<h2>Hallo @user.userName!</h2>
+			<div id="erstellen" class="buttons">
+				<a class="btn btn-primary" href="@routes.Application.spiel_erstellen()">Spiel erstellen</a>
+			</div>
+			<div class="buttons">
+				<a class="btn btn-success" href="@routes.Application.spielliste()">Spiel beitreten</a>
+			</div>
+			<div class="buttons">
+				<a class="btn btn-warning" href="@routes.Application.regelwerk()">Regelwerk</a>
+			</div>
+			<div class="buttons">
+				<a class="btn btn-danger" href="@routes.Application.testChat()">Chatroom betreten</a>
+			</div>
+		</section>
 	</div>
-	<div class="buttons">
-		<a href="@routes.Application.spielliste()">Spiel beitreten</a>
-	</div>
-	<div class="buttons">
-		<a href="@routes.GetStarted.regelwerk()">Regelwerk</a>
-	</div>
-	<div class="buttons">
-		<a href="@routes.Application.testChat()">Chatroom betreten</a>
-	</div>
-	<script type="text/javascript">
-	
-	        
-		
-	</script>
+	<footer class="col-md-12" id="footer">
+		<p> &COPY; 2014 | Dominic Sickel &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Projekt für Web-Technologien von der HTWG-Konstanz</p>
+	</footer>
+
 }
