--- a/app/views/regelwerk.scala.html
+++ b/app/views/regelwerk.scala.html
@@ -6,65 +6,77 @@
 </script>
 }
 @main("Regelwerk")(javaScript) {
-	<header>
-		<div id="titelbild" src="URL für UNO-Bild"></div>
-		<h2>Regelwerk</h2>
-		<h3>Ein Projekt von B.Pllana, D.Sickel und V.Weirich</h3>
+	<header class="col-md-12" id="header">
+		<a class="btn btn-link" href="@routes.Application.impressum()">Impressum</a>
+		<a class="btn btn-link" href="@routes.Application.startseiteGet()">Startseite</a>
+		<a class="btn btn-link" href="@routes.Application.login()">Ausloggen</a>
 	</header>
-	<div class="buttons">
-		<a href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>
+	<div class="col-md-12 regel">
+		<section class="col-md-6 logo">
+				<h1 class="startCenter"><span class="blueText">Will</span><span class="greenText">kom</span><span class="redText">men</span> <span class="yellowText">bei</span></h1>
+				<div id="unologo">
+					<br></br>
+					<br></br>
+					<br></br>
+					<h1>UNO</h1>
+					<h1>UNO</h1>
+					<br></br>
+					<br></br>
+					<br></br>
+				</div>
+				<h1 class="startCenter"><span class="greenText">On</span><span class="yellowText">li</span><span class="redText">ne</span></h1>
+				<h3 class="startCenter">Ein Projekt von <del>B.Pllana,</del> D.Sickel <del>und V.Weirich</del></h3>
+		</section>
+		<section class="col-md-6 regelContent">
+			<!--<a class="btn btn-link btn-xs" href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>-->
+			<br>
+			<h2>Regelwerk</h2>
+			<h3>Kartenset (108 Karten)</h3>
+			<p>bestehend aus...</p>
+			<ul>
+				<li>76 Basiskarten</li>
+				<li>32 Sonderkarten</li>
+			</ul>
+			<h4>Basiskarten:</h4>
+			<ul>
+				<li>19 blaue Karten - 0 bis 9</li>
+				<li>19 gelbe Karten - 0 bis 9</li>
+				<li>19 grüne Karten - 0 bis 9</li>
+				<li>19 rote Karten - 0 bis 9</li>
+			</ul>
+			<h4>Sonderkarten:</h4>
+			<ul>
+				<li>8 Plus Zwei Karten (+2) - jeweils 2 blaue, grüne, rote und
+					gelbe</li>
+				<li>8 Richtungswechsel Karten - jeweils 2 blaue, grüne, rote und
+					gelbe</li>
+				<li>8 Aussetzenkarten - jeweils 2 blaue, grüne, rote und gelbe</li>
+				<li>4 Plus Vier (+4) Farbenwahlkarten</li>
+				<li>4 Farbenwahlkarten</li>
+			</ul>
+			<h3>Ziel des Spiels</h3>
+			<p>Gewonnen hat der Spieler, welcher als erstes keine Karten mehr
+				auf der Hand hat</p>
+			<h3>Spielregeln</h3>
+			<ul>
+				<li>Karte zum Ausspielen muss dieselbe Farbe oder Zahl haben</li>
+				<li>Die Richtungswechsel-Karte ändert die Spielrichtung</li>
+				<li>Die Aussetzen-Karte lässt den nächsten Spieler eine
+					Runde aussetzen</li>
+				<li>Die +2-Karte lässt den nächsten Spieler 2 Karten ziehen</li>
+				<li>Die +4-Karte lässt den nächsten Spieler 4 Karten ziehen und 
+					erlaubt es zusätzlich die Farbe zu wechseln (noch nicht implementiert!)</li>
+				<li>Die Farbwechsel-Karte lässt den Spieler eine neue Farbe
+					wählen</li>
+				<li>Kann ein Spieler keine Karte legen muss er/sie eine Karte
+					ziehen</li>
+			</ul>
+			<!--<a class="btn btn-link btn-xs" href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>-->
+		</section>
+		
 	</div>
-	<div>
-		<h3>Kartenset (108 Karten)</h3>
-		<p>bestehend aus...</p>
-		<ul>
-			<li>76 Basiskarten</li>
-			<li>32 Sonderkarten</li>
-		</ul>
-		<h4>Basiskarten:</h4>
-		<ul>
-			<li>19 blaue Karten – 0 bis 9</li>
-			<li>19 gelbe Karten – 0 bis 9</li>
-			<li>19 grüne Karten – 0 bis 9</li>
-			<li>19 rote Karten – 0 bis 9</li>
-		</ul>
-		<h4>Sonderkarten:</h4>
-		<ul>
-			<li>8 Zieh Zwei Karten (+2) – jeweils 2 blaue, grüne, rote und
-				gelbe</li>
-			<li>8 Richtungswechsel Karten - jeweils 2 blaue, grüne, rote und
-				gelbe</li>
-			<li>8 Aussetzenkarten – jeweils 2 blaue, grüne, rote und gelbe</li>
-			<li>4 Zieh Vier (+4) Farbenwahlkarten</li>
-			<li>4 Farbenwahlkarten</li>
-		</ul>
-		<h3>Ziel des Spiels</h3>
-		<p>Gewonnen hat der Spieler, welcher als erstes keine Karten mehr
-			auf der Hand hat</p>
-		<h3>Spielregeln</h3>
-		<ul>
-			<li>Karte zum Ausspielen muss selbe Farbe oder Zahl haben</li>
-			<li>Die Richtungswechsel-Karte (RW) ändert die Spielrichtung</li>
-			<li>Die Aussetzen-Karte (AS)lässt den nächsten Spieler eine
-				Runde aussetzen</li>
-			<li>Die +2-Karte lässt den nächsten Spieler 2 Karten ziehen,
-				diese kann durch eine eigene +2-,+4- oder eine RW-Karte weiter
-				gegeben werden</li>
-			<li>Die +4-Karte lässt den nächsten Spieler 4 Karten ziehen,
-				zudem darf eine neue Farbe gewählt werden, diese kann durch eine
-				eigene +4-Karte weiter gegeben werden</li>
-			<li>Die Farbwechsel-Karte lässt den Spieler eine neue Farbe
-				wählen</li>
-			<li>Die "0" zwingt alle Spieler dazu, ihr Blatt in Spielrichtung
-				weiter zu geben</li>
-			<li>Hat ein Spieler nur noch eine Karte auf der Hand muss
-				er/sie, vor beenden des Zuges, "UNO" rufen, tut er/sie dies nicht
-				oder zum falschen Zeitpunkt muss 1 Karte gezogen werden</li>
-			<li>Kann ein Spieler keine Karte legen muss er/sie eine Karte
-				ziehen</li>
-		</ul>
-	</div>
-	<div class="buttons">
-		<a href="@routes.Application.startseiteGet()">Zur Startseite zurück</a>
-	</div>
+	<footer class="col-md-12" id="footer">
+		<p> &COPY; 2014 | Dominic Sickel &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Projekt für Web-Technologien von der HTWG-Konstanz</p>
+	</footer>
+
 }
