Observer Pattern implementiert

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -27,7 +27,7 @@
 	</div>-->
 	
 		<header class="col-md-12" id="header">
-			<a class="btn btn-link" href="@routes.Application.regelwerk()">Impressum</a>
+			<a class="btn btn-link" href="@routes.Application.impressum()">Impressum</a>
 		</header>
 		<div class="col-md-12 start">
 			<section class="col-md-6 logo">
