Auskommentierten Code entfernt

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,7 +24,7 @@
 				<br></br>
 			</div>
 			<h1 class="startCenter"><span class="greenText">On</span><span class="yellowText">li</span><span class="redText">ne</span></h1>
-			<h3 class="startCenter">Ein Projekt von <del>B.Pllana,</del> D.Sickel <del>und V.Weirich</del></h3>
+			<h3 class="startCenter">Ein Projekt von D.Sickel</h3>
 		</section>
 		<section class="col-md-6 indexContent">
 			<a class="btn btn-link" href="@routes.Application.login()"><h2>Zum Login</h2></a>
