--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -43,7 +43,7 @@
 					<br></br>
 				</div>
 				<h1 class="startCenter"><span class="greenText">On</span><span class="yellowText">li</span><span class="redText">ne</span></h1>
-				<h3 class="startCenter">Ein Projekt von <del>B.Pllana,</del> D.Sickel <del>und V.Weirich</del></h3>
+				<h3 class="startCenter">Ein Projekt von D.Sickel</h3>
 			</section>
 			<section class="col-md-6 loginContent">
 				<h2 class="redText startCenter">Login</h2>
